Fix: Increase input field width and centre align contents.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,7 +66,8 @@ p {
 }
 
 input {
-    width: 20px;
+    width: 30px;
+    text-align: center;
 }
 
 /* The two rules below were taken from a StackOverflow post. Please refer to README. */
